add new GC vmargs to whitelist